[package]
name = "spookyqr"
version = "0.1.0"
authors = ["Kyle Macey <kylemacey@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"

[dependencies.qrcode-generator]
version = "*"

[[bin]]
name = "spookyqr"
path = "main.rs"
